# Deep-Agents-Langchain

./: README.md  main.py  pyproject.toml  requirements.txt
.jupyter_config/: migrated
deepagentsdemo/: 1-basicdeepagents.ipynb  2-contextengineering.ipynb  3-backends.ipynb  4-subagents.ipynb
deepagentsdemo/notes/: todo.txt
deepagentsdemo/projects/: AGENTS.md
