[project]
name = "deep-agents-langchain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "deepagents>=0.6.11",
    "ipykernel>=7.3.0",
    "langchain>=1.3.10",
    "langchain-groq>=1.1.3",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.3.2",
    "langchain-quickjs>=0.3.0",
    "tavily-python>=0.7.26",
]
